tests/types/errors/return_type_mismatch.expr
function answer() -> i32 {
    return "nope";
}
